Apache Whirr Change Log

Trunk (unreleased changes)

  NEW FEATURES

    WHIRR-258. Add Ganglia as a service (Karel Vervaeke via asavu)

  IMPROVEMENTS

    WHIRR-116. Site should have docs for each released version. (tomwhite)

    WHIRR-356. Upgrade elasticsearch to 0.17.4 (asavu)

  BUG FIXES

    WHIRR-377. Fix broken CLI logging config. (asavu via tomwhite)

Release 0.6.0 - 2011-08-17

  NEW FEATURES

    WHIRR-313. Add Hama as a Service. (Edward J. Yoon via tomwhite)

    WHIRR-326. Use jclouds provider metadata to help with cloud 
    provider configuration (asavu)

    WHIRR-76. Support spot instances in python scripts (Soren Macbeth via  asavu)

    WHIRR-260. Support Spot Instances (asavu)

    WHIRR-240. [HBase] Enable support for HBase 0.90.x (Bruno Dumon via asavu)

  IMPROVEMENTS

    WHIRR-28. Add examples module (asavu)

    WHIRR-319. Run rat & checkstyle before packaging (tomwhite and asavu)

    WHIRR-311. Allow services to register new CLI commands (asavu)

    WHIRR-320. Convert site documentation to xdoc format (asavu)

    WHIRR-323. Allow user to specify a blobstore container to be used 
    for caching local files (asavu)

    WHIRR-327. Upgrade to jclouds 1.0.0 (Adrian Cole and asavu)

    WHIRR-331. Add the ability to specify tarball URLs that are local 
    to the remote machine (asavu)

    WHIRR-338. byon cluster with hostnames defined in /etc/hosts.
    (Bruno Dumon via tomwhite)

    WHIRR-345. Add Hama service information to the website 
    (Edward J. Yoon via asavu)

    WHIRR-350. Update Hama service to 0.3 version (Edward J. Yoon via asavu)

    WHIRR-354. Upgrade to jclouds 1.1.0 (Adrian Cole via asavu)

    WHIRR-257. Remove outdated Python contrib (Tom White via asavu)

    WHIRR-339. Allow to specify hbase-site.xml properties through 
    cluster configuration file (Bruno Dumon via asavu)

    WHIRR-349. Retry if blobstore put fails (Karel Vervaeke and asavu)
